--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,3 +14,23 @@ body {
     background-image: url('../assets/images/bg-header-mobile.png');
   }
 }
+
+@layer base {
+  h3 {
+    @apply mb-8 text-4xl font-bold text-darkGrayisBlue md:text-5xl;
+  }
+}
+
+@layer components {
+  .btn {
+    @apply p-4 px-8 rounded-full shadow-lg duration-200 hover:opacity-80;
+  }
+}
+
+.section-container {
+  @apply max-w-6xl mx-auto text-center;
+}
+
+.button-container {
+  @apply flex flex-col justify-center w-full space-y-6 text-xl text-white md:flex-row md:space-y-0 md:space-x-4;
+}
