--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,6 +19,10 @@ body {
   h3 {
     @apply mb-8 text-4xl font-bold text-darkGrayisBlue md:text-5xl;
   }
+
+  h5 {
+    @apply mb-2 text-2xl font-bold text-darkGrayisBlue;
+  }
 }
 
 @layer components {
@@ -29,6 +33,10 @@ body {
 
 .section-container {
   @apply max-w-6xl mx-auto text-center px-10;
+}
+
+.section-content {
+  @apply max-w-3xl mx-auto text-xl leading-9 text-center text-grayisBlue;
 }
 
 .button-container {
